# aivs

./: CHANGELOG.md  CLAUDE.md  HISTORY.md  LICENSE  NEXT.md  README.md  cover_letter.docx  cover_letter.md  declaration_of_interests.docx  declaration_of_interests.md  pyproject.toml  tables.docx  tables.md  var_manuscript.docx  var_manuscript.md
docs/: chat_handling_protocol.md
docs/case_studies/: README.md
docs/origins/: README.md  brainstorming-session.md  design-conversation.md
docs/positioning/: prov-agent-alignment.md
examples/: kappa_friction_audit.json  kappa_friction_audit.py  kiran_triplet_proof_audit.json  kiran_triplet_proof_audit.py  mechanism_classifier_audit.py  minimal_audit.py  run_claude_code_adapter.py  smith_2026_audit.json  smith_2026_audit.py
schema/: audit_artifact-0.1.0.json  audit_artifact-0.2.0.json
src/aivs/: __init__.py
src/aivs/adapters/: __init__.py  aider.py  base.py  claude_code.py  codex.py
src/aivs/meta_schema/: __init__.py  core.py
src/aivs/vocabulary/: __init__.py  v0_1.py
tests/: test_adapters.py  test_meta_schema.py
