[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aivs"
version = "0.1.0"
description = "AI-Integrated Verification System: descriptive audit of AI-mediated research workflows"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aivs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
